few less fixes as text wasnt aligned properlt

--- a/less/flipcard.less
+++ b/less/flipcard.less
@@ -57,12 +57,12 @@
       }
     }
 
-    .component-left&,
-    .component-right& {
+    .component.is-left&,
+    .component.is-right& {
       min-height: 9.375rem;
     }
 
-    &__item-face {
+    &-face {
       border: none;
       cursor: pointer;
       float: none;
